background added to add button to fix blue button issue on ios safari

--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@
     .todo-entry-container button {
         padding: 5px 10px;
         border: 0;
+        background: #EEEEEE;
     }
 
 .add-icon {
